<resources>
    <string name="app_name">Weather clothes</string>
    <string name="heading">Clothes according to the weather</string>
    <string name="email_hint">Enter your Email ID</string>
    <string name="password_hint">Enter your password</string>
    <string name="button_text">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="Hello">"Здраствуйте, "</string>
    <string name="footwear">footwear</string>
    <string name="headger">headger</string>
    <string name="outerwear">outerwear</string>
    <string name="pants">Pants</string>
    <string name="shirt">shirt</string>
</resources>