<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/footwear_image"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_footwear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footwear"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/headgear_image"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_headger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headger"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outerwear_image"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_outerwear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outerwear"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pants_image"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_pants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pants"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shirt_image"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_shirt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shirt"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>